compositor: Handle output destruction deferral

weston_head_detach() already handles the disable of the output if it's
the last one.

See also: https://gitlab.freedesktop.org/wayland/weston/-/issues/697

Bug-AGL: SPEC-4625
Signed-off-by: Marius Vlad <marius.vlad@collabora.com>
Change-Id: I542b14905b7b6aa220142d0d2dd5cec922c4fc33